fixing on mobile styling, graphcompare

--- a/src/styles/markdown.css
+++ b/src/styles/markdown.css
@@ -3,8 +3,8 @@
 --------------------------------------------------------------------------------------- */
 /*
     Description : CSS for markdown rendering
-    Version     : 1.2
-    Last Update : 12.11.2025
+    Version     : 1.3
+    Last Update : 26.11.2025
     Author      : lichzelg
     License     : MIT
     License URL : https://www.tldrlegal.com/license/mit-license
@@ -408,7 +408,7 @@
 }
 
 .toc-article {
-    margin-bottom: .8rem;
+    margin-bottom: 0.8rem;
 }
 
 .code-title {
@@ -453,6 +453,38 @@ dt {
 }
 dd {
     margin: 0; /* Remove default margin to keep it inline */
+}
+
+/* ------------------------------------------------------------------------------------ */
+/*        mobile                                                                        */
+/* ------------------------------------------------------------------------------------ */
+@media (max-width: 480px) {
+    .article {
+        padding: 0.2rem;
+    }
+
+    .toc-container {
+        display: none;
+    }
+
+    :global(.markdown .img20),
+    :global(.markdown .img40),
+    :global(.markdown .img60),
+    :global(.markdown .img80),
+    :global(.markdown .img100) {
+        margin: auto !important;
+        width: 100% !important;
+    }
+}
+
+@media (min-width: 481px) and (max-width: 1024px) {
+    .article {
+        padding: 2rem;
+    }
+
+    .toc-container {
+        display: none;
+    }
 }
 
 /* ------------------------------------------------------------------------------------ */
